<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:padding="10dp"
    android:background="@color/blue_22283d"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="360dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_marginEnd="10dp"
        android:layout_alignBottom="@+id/rv_leagues"
        android:layout_alignParentEnd="true"
        android:src="@drawable/logo_player_2"
        android:contentDescription="@string/app_name"
        android:layout_width="80dp"
        android:layout_height="80dp"/>

    <TextView
        android:id="@+id/lb_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:gravity="start"
        android:text="@string/select_league"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_leagues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_title"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/item_select_league" />

</RelativeLayout>