<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.HomeActivity">

    <TextView
        android:id="@+id/lb_title"
        style="@style/TextViewTitle.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gordita_bold"
        android:gravity="center"
        android:text="@string/app_name"
        app:drawableStartCompat="@drawable/logo_player_small" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lb_title"
        app:defaultNavHost="true"
        app:navGraph="@navigation/mobile_navigation" />

    <com.google.android.material.button.MaterialButton
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/btn_retry"
        android:onClick="onSelectLeague"
        style="@style/Button"
        android:textAllCaps="false"
        app:iconGravity="end"
        tools:text="🏆 Spanish La Liga"
        android:textSize="15sp"
        app:icon="@drawable/ic_baseline_filter_list_24"
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>

</RelativeLayout>